Initial commit with parsers for the msrp and ppdb datasets

--- a/parse_ppdb.ipynb
+++ b/parse_ppdb.ipynb
@@ -57,6 +57,28 @@
     "with open(out_path, 'w') as f:\n",
     "    json.dump(data, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'/Users/erikreppel/Dropbox/school/CSC485/project'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
   }
  ],
  "metadata": {
