compute count vector of sentences togehter to ensure mutual dictionary

--- a/parse_msrp.ipynb
+++ b/parse_msrp.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -148,21 +148,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 73,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "x1 = vectorizer.fit_transform(train_vecs1).toarray()\n",
-    "x2 = vectorizer.fit_transform(train_vecs2).toarray()\n",
-    "z1 = vectorizer.fit_transform(train_vecs1).toarray()\n",
-    "z2 = vectorizer.fit_transform(train_vecs2).toarray()"
+    "x = train_vecs1.append(train_vecs2)\n",
+    "y = test_vecs1.append(test_vecs2)\n",
+    "\n",
+    "xv = vectorizer.fit_transform(x).toarray()\n",
+    "yv = vectorizer.fit_transform(y).toarray()\n",
+    "\n",
+    "x1 = xv[:len(train_vecs1)]\n",
+    "x2 = xv[len(train_vecs1):]\n",
+    "y1 = yv[:len(test_vecs1)]\n",
+    "y2 = yv[len(test_vecs1):]\n",
+    "\n",
+    "assert len(x1) == len(x2)\n",
+    "assert len(y1) == len(y2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -186,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
