Add implementation of cosine similarity, gets 69.97%

--- a/parse_msrp.ipynb
+++ b/parse_msrp.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -62,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = parse_file(TRAIN_FP)\n",
@@ -72,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train.to_csv('./small_data/train.csv')\n",
@@ -142,8 +148,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = train_vecs1.append(train_vecs2)\n",
@@ -152,18 +160,21 @@
     "xv = vectorizer.fit_transform(x).toarray()\n",
     "yv = vectorizer.fit_transform(y).toarray()\n",
     "\n",
+    "\n",
+    "\n",
     "x1 = xv[:len(train_vecs1)]\n",
     "x2 = xv[len(train_vecs1):]\n",
     "y1 = yv[:len(test_vecs1)]\n",
     "y2 = yv[len(test_vecs1):]\n",
     "\n",
     "assert len(x1) == len(x2)\n",
-    "assert len(y1) == len(y2)"
+    "assert len(y1) == len(y2)\n",
+    "assert len(y1[0]) == len(y2[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -175,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -187,22 +198,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "with open('./small_data/test_sentence1_vecs.npy', 'w') as f:\n",
-    "    np.save(f, z1)\n",
+    "    np.save(f, y1)\n",
     "    \n",
     "with open('./small_data/test_sentence2_vecs.npy', 'w') as f:\n",
-    "    np.save(f, z2)"
+    "    np.save(f, y2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
