--- a/notebooks/CountVec TSNE.ipynb
+++ b/notebooks/CountVec TSNE.ipynb
@@ -16,20 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sent1 = np.load('./small_data/train_sentence1_vecs.npy')\n",
-    "sent2 = np.load('./small_data/train_sentence2_vecs.npy')\n",
+    "# sent1 = np.load('./small_data/train_sentence1_vecs.npy')\n",
+    "# sent2 = np.load('./small_data/train_sentence2_vecs.npy')\n",
+    "\n",
+    "sent1 = np.load('./small_data/train_word2vec_s1.npy')\n",
+    "sent2 = np.load('./small_data/train_word2vec_s2.npy')\n",
+    "\n",
+    "\n",
     "train_labels = np.load('./small_data/train_labels.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -40,19 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "t = TSNE(perplexity=20., n_iter=1000000)"
+    "t = TSNE(perplexity=50., n_iter=100000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_points = 10\n",
@@ -66,13 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "\n",
     "cmap = plt.get_cmap('gnuplot')\n",
     "colors = [cmap(i) for i in np.linspace(0, 1, n_points)]\n",
     "\n",
@@ -102,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
