--- a/notebooks/parse_msrp.ipynb
+++ b/notebooks/parse_msrp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -75,10 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train.to_csv('./small_data/train.csv')\n",
@@ -101,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +108,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -148,24 +146,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8152 3450\n",
+      "4076 4076\n"
+     ]
+    }
+   ],
    "source": [
     "x = train_vecs1.append(train_vecs2)\n",
     "y = test_vecs1.append(test_vecs2)\n",
     "\n",
-    "xv = vectorizer.fit_transform(x).toarray()\n",
-    "yv = vectorizer.fit_transform(y).toarray()\n",
+    "piv = len(x)\n",
     "\n",
+    "_all = x.append(y)\n",
+    "\n",
+    "_all_vec = vectorizer.fit_transform(_all).toarray()\n",
+    "# yv = vectorizer.fit_transform(y).toarray()\n",
+    "\n",
+    "print len(x), len(y)\n",
+    "xv = _all_vec[:piv]\n",
+    "yv = _all_vec[piv:]\n",
     "\n",
     "\n",
     "x1 = xv[:len(train_vecs1)]\n",
     "x2 = xv[len(train_vecs1):]\n",
     "y1 = yv[:len(test_vecs1)]\n",
     "y2 = yv[len(test_vecs1):]\n",
+    "\n",
+    "print len(x1), len(x2)\n",
     "\n",
     "assert len(x1) == len(x2)\n",
     "assert len(y1) == len(y2)\n",
@@ -174,46 +188,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with open('./small_data/train_sentence2_vecs.npy', 'w') as f:\n",
+    "with open('./small_data/train_sentence2_vecs_eq.npy', 'w') as f:\n",
     "    np.save(f, x1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with open('./small_data/train_sentence1_vecs.npy', 'w') as f:\n",
+    "with open('./small_data/train_sentence1_vecs_eq.npy', 'w') as f:\n",
     "    np.save(f, x2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with open('./small_data/test_sentence1_vecs.npy', 'w') as f:\n",
+    "with open('./small_data/test_sentence1_vecs_eq.npy', 'w') as f:\n",
     "    np.save(f, y1)\n",
     "    \n",
-    "with open('./small_data/test_sentence2_vecs.npy', 'w') as f:\n",
+    "with open('./small_data/test_sentence2_vecs_eq.npy', 'w') as f:\n",
     "    np.save(f, y2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
